# poltergeist

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: integration.yml  publish.yml  python-package.yml
poltergeist/: __init__.py  decorator.py  result.py
tests/: test_decorator.py  test_poltergeist.py  test_result.py
tests/mypy/: test_decorator.yml  test_err.yml  test_ok.yml  test_result.yml
typetests/: run.py
typetests/mypy/: test_decorator.py
