[tool.poetry]
name = "poltergeist"
version = "0.0.0"
description = "Rust-like error handling in Python, with type-safety in mind."
authors = ["Alexander Malyga <alexander@malyga.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alexandermalyga/poltergeist"
repository = "https://github.com/alexandermalyga/poltergeist"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"
pytest-mypy-plugins = "^3.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"

[tool.mypy]
strict = true

[tool.black]
target_version = ["py310", "py311"]

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = ["pragma: not covered", "@overload"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
